CKS/Chapter-4/backend-ingress-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: morty-ingress-deny
spec:
  podSelector:
    matchLabels:
      app: morty
  policyTypes:
  - Ingress
