CKS/Chapter-4/rick-egress-allow-to-morty.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: rick-egress-allow-to-morty
spec:
  podSelector:
    matchLabels:
      app: rick
  policyTypes:
  - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: morty
