CKS/Chapter-4/rick-egress-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: rick-egress-deny
spec:
  podSelector:
    matchLabels:
      app: rick
  policyTypes:
  - Egress
  egress: []
